Fix shortcut config changes sometimes not updating until restart

Summary:
After setting or resetting custom shortcuts for actions in Browse or
Start Page Mode and then switching to View Mode these changes are not
active until next Gwenview restart.
This patch adds a `refreshActionProperties()` call after the shortcut
config dialog is closed to fix this.

BUG: 389331
FIXED-IN: 18.04.0

Test Plan:
* Start Gwenview in Browse Mode or Start Page Mode
* {nav Settings > Configure Shortcuts...}
* Set custom shortcut for {nav Quit} to e.g. {key Esc}
* Switch to View Mode displaying any image
* {key Esc} should quit Gwenview
* Restart Gwenview in Browse Mode or Start Page Mode
* {nav Settings > Configure Shortcuts...}
* Reset shortcuts with {nav Defaults}
* Switch to View Mode displaying any image
* {key Ctrl Q} should quit Gwenview

Reviewers: #gwenview, rkflx

Reviewed By: #gwenview, rkflx

Subscribers: rkflx, huoni

Differential Revision: https://phabricator.kde.org/D12023